修改前置事项选择框

--- a/src/common/select/SelectItem.scss
+++ b/src/common/select/SelectItem.scss
@@ -4,7 +4,11 @@
     height: 35px;
     line-height: 35px;
     padding: 0px 20px;
-   
+   .select-item-text {
+        text-overflow: ellipsis;
+        white-space: nowrap;
+        overflow: hidden;
+   }
 
 }
 .select-item:hover {
