--- a/src/common/select/Select.scss
+++ b/src/common/select/Select.scss
@@ -1,8 +1,15 @@
 .select-view {
     position: relative;
     cursor: pointer;
+
     .select-input {
         margin-right: 10px;
+    }
+    .select-view-text {
+        outline: none;
+        text-overflow: ellipsis;
+        white-space: nowrap;
+        overflow: hidden;
     }
     .select-content {
         display: inline-flex;
@@ -10,18 +17,24 @@
         align-items: center;
         white-space: nowrap;
         width: 100%;
+        height: 100%;
         justify-content: space-between;
+
+        
+
         .svg-icon {
             margin-right: 0;
         }
+
         .select-view-icon {
             display: flex;
             align-items: center;
         }
     }
-    .select-content:hover {
-        color: var(--tiklab-blue);
-    }
+
+    // .select-content:hover {
+    //     color: var(--tiklab-blue);
+    // }
 
     .select-icon {
         width: 20px;
@@ -37,15 +50,38 @@
         border-radius: 16px;
         font-size: 12px;
     }
+
     .select-dropdown {
         position: absolute;
         background-color: #fff;
-        width: 230px;
+        min-width: 230px;
+        width: 100%;
         border-radius: 4px;
         z-index: 3;
         left: 0;
         margin-top: 3px;
         box-shadow: 0 3px 6px -4px rgb(0 0 0 / 12%), 0 6px 16px rgb(0 0 0 / 8%), 0 9px 28px 8px rgb(0 0 0 / 5%);
+        .select-search-box {
+            height: 40px;
+            border-bottom: 1px solid #f0f0f0;
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+            padding: 0 20px;
+            .select-search-input {
+                outline: none;
+                border: 0;
+                height: 39px;
+            }
+            .big-svg {
+                width: 20px;
+                height: 20px;
+            }
+            .cancel-svg {
+                width: 15px;
+                height: 15px;
+            }
+        }
         .select-dropdown-bottom {
             height: 40px;
             line-height: 40px;
@@ -54,15 +90,17 @@
             align-items: center;
             justify-content: end;
             border-top: 1px solid #f0f0f0;
+
             .dropdown-botton {
                 line-height: 15px;
-                
+
                 padding: 5px 10px;
                 font-size: 12px;
                 box-sizing: content-box;
                 border-radius: 4px;
-                
+
             }
+
             .clear {
                 background: #e3e8f0;
                 cursor: pointer;
@@ -84,6 +122,12 @@
         font-weight: 500;
         border-bottom: 1px solid #F0F0F0;
     }
-    
-   
+
+
+}
+.select-focused {
+    border: 1px solid #40a9ff;
+    outline: 0;
+    box-shadow: 0 0 0 2px rgba(24, 144, 255, .2);
+    border-radius: 2px;
 }
