--- a/src/common/styles/_color.scss
+++ b/src/common/styles/_color.scss
@@ -88,6 +88,10 @@ $form-input-color: #e3e8f07d;
     width: 20px;
     height: 20px;
 }
+.cancel-svg {
+    width: 15px;
+    height: 15px;
+}
 
 .menu-icon {
     width: 18px;
