修改事项列表筛选样式

--- a/src/work/components/WorkAside.scss
+++ b/src/work/components/WorkAside.scss
@@ -110,11 +110,11 @@
                 width: fit-content;
                 color: #2b333e;
             }
-            .PROGRESS{
+            .work-status-process{
                 background: #b0d5dfa1;
                 color: #132c33;
             }
-            .DONE {
+            .work-status-done {
                 background: #dfecd5e3;
                 color: #5e5314;
             }
