--- a/src/work/components/WorkBasicInfo.scss
+++ b/src/work/components/WorkBasicInfo.scss
@@ -78,6 +78,9 @@
                 border-bottom: 1px solid rgb(223, 225, 230);
             }
 
+            .ant-row {
+                overflow: inherit;
+            }
             .right {
                 width: 60%;
                 border-radius: 4px;
