--- a/src/work/components/WorkBodar.scss
+++ b/src/work/components/WorkBodar.scss
@@ -1,12 +1,13 @@
 .work-bodar {
     height: calc(100% - 120px);
     background: #f7f7f7;
-    overflow: auto;
+    // overflow: auto;
     .work-bodar-flex {
         width: 100%;
         height: 100%;
         display: flex;
         align-items: center;
+        overflow-x: auto;
     }
 }
 .work-bodar-list {
@@ -15,8 +16,9 @@
     padding: 0 20px;
     height: 100%;
     margin: 0 auto;
-    justify-content: center;
-
+    
+    // justify-content: center;
+    
     .work-bodar-box-border {
         border-radius: 4px;
         min-height: 100%;
@@ -24,11 +26,12 @@
     }
     .work-bodar-box {
         min-height: 100px;
-        width: 250px;
         border-radius: 4px;
+        // width: fit-content;
         // height: fit-content;
         flex-shrink: 0;
-       
+        min-width: 250px;
+        // overflow: auto;
         .work-bodar-title {
             line-height: 40px;
             position: sticky;
@@ -44,6 +47,29 @@
                 font-size: 12px;
                 margin-left: 10px;
             }
+        }
+        .work-border-box-list {
+            height: calc(100% - 72px);
+            overflow: auto;
+            width: fit-content;
+            .change-page {
+                display: flex;
+                justify-content: center;
+                color: var(--tiklab-blue);
+                cursor: pointer;
+            }
+        }
+
+        .work-border-box-list::-webkit-scrollbar {
+            width: 5px;
+        }
+        .work-border-box-list::-webkit-scrollbar-thumb {
+            border-radius: 5px;
+            background: var(--tiklab-gray-400);
+        }
+        .work-border-box-list::-webkit-scrollbar-track {
+            border-radius: 0;
+            background: var(--tiklab-gray-600);
         }
         .work-bodar-item{
             margin: 0 auto;
@@ -75,15 +101,15 @@
             background-color: #d0e5f2;
         }
     }
-    .work-bodar-box::-webkit-scrollbar {
-        width: 0 !important;
-        height: 0 !important;
-    }
+    // .work-bodar-box::-webkit-scrollbar {
+    //     width: 0 !important;
+    //     height: 0 !important;
+    // }
     
-    .work-bodar-box {
-        -ms-overflow-style: none;
-        overflow: -moz-scrollbars-none;
-    }
+    // .work-bodar-box {
+    //     -ms-overflow-style: none;
+    //     overflow: -moz-scrollbars-none;
+    // }
 }
 .work-bodar-name {
     font-size: 16px;
