--- a/src/project/lineMap/component/Epic.scss
+++ b/src/project/lineMap/component/Epic.scss
@@ -1,8 +1,8 @@
 .epic {
+    margin-top: 15px;
     .epic-action {
         display: flex;
         justify-content: space-between;
-        padding-bottom: 15px;
         
     }
     .add-epic-botton {
