--- a/src/project/workLog/components/LogContent.scss
+++ b/src/project/workLog/components/LogContent.scss
@@ -3,6 +3,7 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
+    margin-bottom: 15px;
     .log-tabs {
         display: flex;
         align-items: center;
