--- a/src/common/styles/_index.scss
+++ b/src/common/styles/_index.scss
@@ -18,6 +18,10 @@
     font-weight: 600;
 }
 
+.ant-table-column-sorters {
+    padding: 8px;
+}
+
 .span-botton {
     color: var(--tiklab-blue);
     cursor: pointer;
