--- a/src/home/insight/components/Insight.scss
+++ b/src/home/insight/components/Insight.scss
@@ -1,7 +1,8 @@
 
 .insight {
     height: 100%;
-    
+    background-color: var(--tiklab-gray-600);
+    overflow: auto;
     .insight-content {
         height: calc(100vh - 50px);
         overflow: auto;
