--- a/src/home/insight/components/NewInsight.scss
+++ b/src/home/insight/components/NewInsight.scss
@@ -4,6 +4,7 @@
     display: flex;
     justify-content: space-between;
     height: 100%;
+    padding: var(--tiklab-padding-item);
     .project-breadcrumb-icon {
         width: 25px;
         height: 25px;
