--- a/src/home/search/components/Search.scss
+++ b/src/home/search/components/Search.scss
@@ -82,6 +82,9 @@
             }
 
         }
+        .keyboard-select {
+            background-color: #f5f7fa;
+        }
     }
 
     .recent-box {
