--- a/src/project/lineMap/component/LineMap.scss
+++ b/src/project/lineMap/component/LineMap.scss
@@ -1,52 +1,97 @@
-.project-linemap{
-    padding: var(--tiklab-padding-item);;
+.project-linemap {
+    padding: var(--tiklab-padding-item);
+    ;
     background-color: #fff;
+
+    .project-linemap-head {
+        display: flex;
+        align-items: center;
+        gap: 20px;
+        height: 40px;
+        line-height: 40px;
+
+        .project-linemap-title {
+            font-size: var(--tiklab-font-16);
+            font-weight: var(--tiklab-font-weight-bold);
+            display: flex;
+            align-items: center;
+        }
+
+        .line-map-tab {
+            display: flex;
+            align-items: center;
+            flex: 1;
+            gap: 15px;
+            border-bottom: 1px solid #f0f0f0;
+
+            .tab-tabpane {
+                cursor: pointer;
+                height: 40px;
+                line-height: 40px;
+            }
+
+            .tab-tabpane-select {
+                color: var(--tiklab-blue);
+                border-bottom: 2px solid var(--tiklab-blue);
+            }
+        }
+    }
 }
 
 .linemap {
     padding: 10px 0;
 }
+
 .sprint-linemap {
     height: calc(100% - 160px);
 }
+
 .version-linemap {
     height: calc(100% - 160px);
 }
+
 .epic-linemap {
     height: calc(100% - 210px);
 }
+
 .linemap {
     padding: 10px 0;
 }
+
 .linemap-time {
-    margin-top: 10px;
+    margin-top: 20px;
     position: relative;
     height: 100%;
-    ul{
+
+    ul {
         margin: 0;
         padding: 0;
     }
-    
-    .linemap-time::-webkit-scrollbar { 
+
+    .linemap-time::-webkit-scrollbar {
         width: 0 !important;
         height: 0 !important;
     }
+
     .linemap-time {
-        -ms-overflow-style: none; 
+        -ms-overflow-style: none;
         overflow: -moz-scrollbars-none;
     }
+
     .time-table {
-        border-bottom: 1px solid  #E6EDFA;
+        border-bottom: 1px solid #E6EDFA;
         text-align: center;
         overflow: hidden;
         position: relative;
-        height: 100% ;
+        height: 100%;
         flex: 1;
+
         .table-border {
             border-bottom: 1px solid #E6EDFA;
             height: 50px;
             line-height: 50px;
         }
+
         .table-hearder {
             display: flex;
             justify-content: space-between;
@@ -57,31 +102,37 @@
             font-weight: var(--tiklab-font-weight-bold);
             position: relative;
             top: 0;
-            .table-hearder-gatter  {
+
+            .table-hearder-gatter {
                 width: 1000px;
                 height: 50px;
-                border-left: 1px solid  var(--tiklab-gray);
+                border-left: 1px solid var(--tiklab-gray);
                 font-weight: var(--tiklab-font-weight-bold);
                 overflow: auto;
             }
-            .table-hearder-gatter::-webkit-scrollbar { 
+
+            .table-hearder-gatter::-webkit-scrollbar {
                 width: 0 !important;
                 height: 0 !important;
             }
+
             .table-hearder-gatter {
-                -ms-overflow-style: none; 
+                -ms-overflow-style: none;
                 overflow: -moz-scrollbars-none;
             }
+
             .table-hearder-text {
                 height: 50px;
                 flex: 1;
             }
+
             .table-timer {
                 .table-month {
                     height: 25px;
                     line-height: 25px;
-                    background-color:  #E6EDFA;
+                    background-color: #E6EDFA;
                     display: inline-flex;
+
                     .table-month-td {
                         border-right: solid #fff 1px;
                         font-size: 12px;
@@ -89,26 +140,31 @@
                     }
                 }
             }
+
             .table-date {
                 height: 25px;
                 display: inline-flex;
                 text-align: center;
-                border-bottom: 1px solid  var(--tiklab-gray);
+                border-bottom: 1px solid var(--tiklab-gray);
                 line-height: 25px;
             }
+
             .table-day {
                 border-right: #E6EDFA solid 1px;
                 font-size: 12px;
             }
         }
+
         .table-hidden {
             display: none;
         }
+
         .table-tr {
             display: flex;
             justify-content: space-between;
             align-items: center;
             height: 50px;
+
             .table-td {
                 height: 50px;
                 flex: 1;
@@ -116,6 +172,7 @@
                 overflow: hidden;
                 text-overflow: ellipsis;
                 white-space: nowrap;
+
                 .table-icon {
                     display: inline-block;
                     position: absolute;
@@ -123,26 +180,31 @@
                     top: 18px;
                 }
             }
+
             .table-gatter {
                 width: 1000px;
             }
         }
-        .table-body  {
+
+        .table-body {
             max-height: calc(100% - 50px);
             overflow-y: hidden;
-            ul:nth-child(2n+0)
-            {
-                background:#f7f7f7;
+
+            ul:nth-child(2n+0) {
+                background: #f7f7f7;
             }
         }
+
         .table-pic::-webkit-scrollbar {
             width: 0 !important;
             height: 0 !important;
         }
+
         .table-pic {
             -ms-overflow-style: none;
             overflow: -moz-scrollbars-none;
         }
+
         .table-pic {
             position: absolute;
             top: 50px;
@@ -151,61 +213,72 @@
             max-height: calc(100% - 50px);
             overflow-x: auto;
             overflow-y: hidden;
+
             .table-overflow {
                 overflow: auto;
             }
+
             .table-day {
                 border-right: #d0e5f2 solid 1px;
             }
+
             .table-timer {
                 .table-month {
                     height: 25px;
                     line-height: 25px;
-                    background-color:  #d0e5f2;
+                    background-color: #d0e5f2;
                     display: inline-flex;
+
                     .table-month-td {
                         border-right: solid #fff 1px;
                     }
                 }
             }
+
             .table-overflow {
                 height: 100%;
+
                 .gantt-box {
                     height: calc(100% - 50px) !important;
                 }
             }
         }
-    
+
 
     }
 }
 
 .top-botton {
     text-align: right;
+
     .ant-radio-button-wrapper-checked:not(.ant-radio-button-wrapper-disabled) {
         z-index: 1;
         color: #ffff;
         background: #E6EDFA;
         border-color: #E6EDFA;
     }
+
     .ant-radio-button-wrapper-checked:not([class*=" ant-radio-button-wrapper-disabled"]).ant-radio-button-wrapper:first-child {
         border-right-color: #E6EDFA;
     }
 }
+
 .scroll-row {
     display: flex;
     justify-content: flex-end;
     margin-top: 20px;
+
     .scroll-box {
         width: 1000px;
         height: 10px;
         background-color: #f5f5f5;
         border-radius: 4px;
         position: relative;
+
         .scroll-slider {
             width: 100px;
             height: 10px;
-            background-color: rgba(0,0,0,0.4);
+            background-color: rgba(0, 0, 0, 0.4);
             border-radius: 4px;
             position: absolute;
             top: 0;
@@ -213,22 +286,25 @@
         }
     }
 }
+
 .scroll-col {
     display: flex;
     justify-content: flex-end;
     position: absolute;
     top: 50;
     right: 0;
+
     .scroll-box {
         width: 10px;
         height: calc(100vh - 270px);
         background-color: #f5f5f5;
         border-radius: 4px;
         position: relative;
+
         .scroll-slider {
             width: 10px;
             height: 100px;
-            background-color: rgba(0,0,0,0.4);
+            background-color: rgba(0, 0, 0, 0.4);
             border-radius: 4px;
             position: absolute;
             top: 0;
