--- a/src/project/sprint/components/Sprint.scss
+++ b/src/project/sprint/components/Sprint.scss
@@ -33,6 +33,7 @@
         height: 50px;
         line-height: 50px;
         gap: 20px;
+        margin-bottom: 15px;
         .vertical-bar {
             width: 1px;
             height: 15px;
@@ -40,7 +41,6 @@
             margin: 0 10px;
         }
         .active-tabs {
-            color: #000;
             border-bottom: 2px solid var(--tiklab-blue);
         }
         .filter-search {
