--- a/src/work/components/WorkSort.scss
+++ b/src/work/components/WorkSort.scss
@@ -52,6 +52,7 @@
             align-items: center;
             justify-content: center;
             border-radius: 4px;
+            cursor: pointer;
         }
 
         .sort-type {
