--- a/src/project/lineMap/component/LineMap.scss
+++ b/src/project/lineMap/component/LineMap.scss
@@ -52,6 +52,8 @@
 
 .epic-linemap {
     height: calc(100% - 210px);
+
+    .epic-linemap-content {}
 }
 
 .linemap {
@@ -79,7 +81,7 @@
     }
 
     .time-table {
-        border-bottom: 1px solid #E6EDFA;
+        border-bottom: 1px solid #fafafa;
         text-align: center;
         overflow: hidden;
         position: relative;
@@ -87,7 +89,7 @@
         flex: 1;
 
         .table-border {
-            border-bottom: 1px solid #E6EDFA;
+            border-bottom: 1px solid #fafafa;
             height: 50px;
             line-height: 50px;
         }
@@ -97,20 +99,20 @@
             justify-content: space-between;
             align-items: center;
             height: 50px;
-            background-color: #E6EDFA;
+            background-color: #fafafa;
             overflow: hidden;
             font-weight: var(--tiklab-font-weight-bold);
             position: relative;
             top: 0;
 
             .table-hearder-gatter {
-                width: 1000px;
+                flex: 1;
                 height: 50px;
-                border-left: 1px solid var(--tiklab-gray);
+                
                 font-weight: var(--tiklab-font-weight-bold);
                 overflow: auto;
             }
-
+            
             .table-hearder-gatter::-webkit-scrollbar {
                 width: 0 !important;
                 height: 0 !important;
@@ -123,14 +125,28 @@
 
             .table-hearder-text {
                 height: 50px;
-                flex: 1;
+                text-align: left;
+                padding-left: 15px;
+            }
+
+            .table-hearder-title {
+                width: 300px;
+            }
+
+            .table-hearder-status {
+                width: 60px;
+            }
+
+            .table-hearder-time {
+                width: 250px;
+                border-right: 1px solid var(--tiklab-gray);
             }
 
             .table-timer {
                 .table-month {
                     height: 25px;
                     line-height: 25px;
-                    background-color: #E6EDFA;
+                    background-color: #fafafa;
                     display: inline-flex;
 
                     .table-month-td {
@@ -147,11 +163,19 @@
                 text-align: center;
                 border-bottom: 1px solid var(--tiklab-gray);
                 line-height: 25px;
+
+                .table-weekday {
+                    border-right: 1px solid #fff;
+                    box-sizing: border-box;
+                }
             }
 
             .table-day {
-                border-right: #E6EDFA solid 1px;
                 font-size: 12px;
+            }
+
+            .table-week {
+                background-color: #f0f0f0;
             }
         }
 
@@ -167,12 +191,9 @@
 
             .table-td {
                 height: 50px;
-                flex: 1;
                 position: relative;
-                overflow: hidden;
-                text-overflow: ellipsis;
-                white-space: nowrap;
-
+                padding-left: 15px;
+                text-align: left;
                 .table-icon {
                     display: inline-block;
                     position: absolute;
@@ -181,18 +202,41 @@
                 }
             }
 
+            .table-td-name {
+                width: 300px;
+                overflow: hidden;
+                text-overflow: ellipsis;
+                white-space: nowrap;
+
+                display: flex;
+                align-items: center;
+                
+            }
+
+            .table-td-status {
+                width: 60px;
+            }
+
+            .table-td-time {
+                width: 250px;
+                border-right: #f0f0f0 1px solid;
+                box-sizing: border-box;
+            }
+
             .table-gatter {
-                width: 1000px;
+                flex: 1;
             }
         }
 
         .table-body {
             max-height: calc(100% - 50px);
             overflow-y: hidden;
-
-            ul:nth-child(2n+0) {
+            .table-grey {
                 background: #f7f7f7;
             }
+            // ul:nth-child(2n+0) {
+            //     
+            // }
         }
 
         .table-pic::-webkit-scrollbar {
@@ -209,17 +253,37 @@
             position: absolute;
             top: 50px;
             right: 0;
-            width: 1000px;
+            width: calc(100% - 610px);
             max-height: calc(100% - 50px);
             overflow-x: auto;
             overflow-y: hidden;
+
+            .table-date-background {
+                // display: flex;
+                position: absolute;
+                height: 100%;
+                top: 0;
+                left: 0;
+                display: inline-flex;
+                text-align: center;
+
+                // line-height: 25px;
+                .table-weekday {
+                    border-right: 1px solid #f0f0f0;
+                    box-sizing: border-box;
+                }
+
+                .table-month {
+                    border-right: 1px solid #f0f0f0;
+                }
+            }
 
             .table-overflow {
                 overflow: auto;
             }
 
             .table-day {
-                border-right: #d0e5f2 solid 1px;
+                border-right: #fafafa solid 1px;
             }
 
             .table-timer {
@@ -254,12 +318,12 @@
     .ant-radio-button-wrapper-checked:not(.ant-radio-button-wrapper-disabled) {
         z-index: 1;
         color: #ffff;
-        background: #E6EDFA;
-        border-color: #E6EDFA;
+        background: #fafafa;
+        border-color: #fafafa;
     }
 
     .ant-radio-button-wrapper-checked:not([class*=" ant-radio-button-wrapper-disabled"]).ant-radio-button-wrapper:first-child {
-        border-right-color: #E6EDFA;
+        border-right-color: #fafafa;
     }
 }
 
@@ -269,14 +333,14 @@
     margin-top: 20px;
 
     .scroll-box {
-        width: 1000px;
+        width: calc(100% - 610px);
         height: 10px;
         background-color: #f5f5f5;
         border-radius: 4px;
         position: relative;
 
         .scroll-slider {
-            width: 100px;
+            width: 50px;
             height: 10px;
             background-color: rgba(0, 0, 0, 0.4);
             border-radius: 4px;
@@ -303,7 +367,7 @@
 
         .scroll-slider {
             width: 10px;
-            height: 100px;
+            height: 50px;
             background-color: rgba(0, 0, 0, 0.4);
             border-radius: 4px;
             position: absolute;
