--- a/src/project/lineMap/component/Epic.scss
+++ b/src/project/lineMap/component/Epic.scss
@@ -50,5 +50,31 @@
         color: var(--tiklab-blue);
         
     }
+    .epci-empty {
+        display: flex;
+        align-items: center;
+        height: 100px;
+        justify-content: center;
+    }
+    .epic-change-page {
+        text-align: center;
+        font-size: 12px;
+        cursor: pointer;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        padding: 5px 0;
+        font-weight: 600;
+        background-color: #fff;
+        z-index: 10;
+        position: relative;
+        .change-page-button {
+            padding-left: 5px;
+            color: var(--tiklab-blue);
+        }
+        .change-page-button:hover{
+            text-decoration: underline;
+        }
+    }
 }
 
