--- a/src/home/common/components/Header.scss
+++ b/src/home/common/components/Header.scss
@@ -49,6 +49,7 @@
                 color: #fff;
                 height: 48px;
                 line-height: 48px;
+                flex-shrink: 0;
             }
             &-item:hover {
                 background: rgba(255,255,255, 0.3);
