--- a/src/project/common/components/ProjectChangeModal.scss
+++ b/src/project/common/components/ProjectChangeModal.scss
@@ -69,6 +69,7 @@
             height: 40px;
             line-height: 40px;
             padding-left: 20px;
+            cursor: pointer;
         }
     
         .change-project-selectName {
