--- a/src/work/components/workCreatDropdown.scss
+++ b/src/work/components/workCreatDropdown.scss
@@ -1,4 +1,5 @@
 .work-creat {
+    position: relative;
     .work-button-icon:hover {
         background: rgba(9, 30, 66, 0.08);
         text-decoration: inherit;
@@ -17,6 +18,7 @@
         z-index: 100;
         // width: 200px;
         border-radius: 4px;
+        width: 125px;
         background: #fff;
         box-shadow: 0 3px 6px -4px #0000001f, 0 6px 16px #00000014, 0 9px 28px 8px #0000000d;
         // .work-type-box-title {
