--- a/src/home/common/components/MessageList.scss
+++ b/src/home/common/components/MessageList.scss
@@ -1,3 +1,13 @@
+.frame-header-message{
+    .ant-avatar-sm {
+        background: transparent;
+        font-size: 23px;
+        display: flex;
+        align-items: center;
+        width: fit-content;
+    }
+}
+
 .frame-header-drawer {
     top: var(--tiklab-head-height);
     .ant-drawer-header {
