--- a/src/project/project/components/Project.scss
+++ b/src/project/project/components/Project.scss
@@ -56,6 +56,10 @@
                 line-height: 30px;
             }
         }
+
+        .ant-empty {
+            width: 100%;
+        }
     }
 }
 .project {
