--- a/src/project/lineMap/component/LineMap.scss
+++ b/src/project/lineMap/component/LineMap.scss
@@ -1,6 +1,5 @@
 .project-linemap {
     padding: var(--tiklab-padding-item);
-    ;
     background-color: #fff;
 
     .project-linemap-head {
@@ -108,11 +107,11 @@
             .table-hearder-gatter {
                 flex: 1;
                 height: 50px;
-                
+
                 font-weight: var(--tiklab-font-weight-bold);
                 overflow: auto;
             }
-            
+
             .table-hearder-gatter::-webkit-scrollbar {
                 width: 0 !important;
                 height: 0 !important;
@@ -135,6 +134,10 @@
 
             .table-hearder-status {
                 width: 60px;
+            }
+
+            .table-hearder-assigner {
+                width: 90px;
             }
 
             .table-hearder-time {
@@ -194,6 +197,7 @@
                 position: relative;
                 padding-left: 15px;
                 text-align: left;
+
                 .table-icon {
                     display: inline-block;
                     position: absolute;
@@ -210,11 +214,18 @@
 
                 display: flex;
                 align-items: center;
-                
+
             }
 
             .table-td-status {
                 width: 60px;
+            }
+
+            .table-td-assigner {
+                width: 90px;
+                overflow: hidden;
+                white-space: nowrap;
+                text-overflow: ellipsis;
             }
 
             .table-td-time {
@@ -231,9 +242,11 @@
         .table-body {
             max-height: calc(100% - 50px);
             overflow-y: hidden;
+
             .table-grey {
                 background: #f7f7f7;
             }
+
             // ul:nth-child(2n+0) {
             //     
             // }
@@ -253,7 +266,7 @@
             position: absolute;
             top: 50px;
             right: 0;
-            width: calc(100% - 610px);
+            width: calc(100% - 700px);
             max-height: calc(100% - 50px);
             overflow-x: auto;
             overflow-y: hidden;
@@ -333,7 +346,7 @@
     margin-top: 20px;
 
     .scroll-box {
-        width: calc(100% - 610px);
+        width: calc(100% - 700px);
         height: 10px;
         background-color: #f5f5f5;
         border-radius: 4px;
@@ -358,6 +371,7 @@
     top: 50;
     right: -15;
     height: calc(100% - 50px);
+
     .scroll-box {
         width: 10px;
         height: 100%;
