--- a/src/project/lineMap/component/SprintPage.scss
+++ b/src/project/lineMap/component/SprintPage.scss
@@ -54,5 +54,23 @@
         background-color: var(--tiklab-gray-400);
         
     }
+    .sprint-linemap {
+        .sprint-status {
+            padding: 2px 3px;
+            background: #e2e1e4;
+            border-radius: 4px;
+            font-size: 10px;
+            width: fit-content;
+            color: #2b333e;
+        }
+        .sprint-status-process{
+            background: #b0d5dfa1;
+            color: #132c33;
+        }
+        .sprint-status-done {
+            background: #dfecd5e3;
+            color: #5e5314;
+        }
+    }
 }
 
