--- a/src/sprint/plan/components/SprintPlan.scss
+++ b/src/sprint/plan/components/SprintPlan.scss
@@ -26,7 +26,7 @@
                 text-align: center;
                 border-top-left-radius: 4px;
                 border-top-right-radius: 4px;
-                position: sticky;
+                // position: sticky;
                 top: 0;
                 background: #f7f7f7;
                 .sprint-plan-title {
@@ -47,6 +47,7 @@
                         position: relative;
                         cursor: pointer;
                         height: 30px;
+                        width: 90px;
                         line-height: 30px;
                         padding: 0 10px;
                         background: #f0f0f0;
