--- a/src/version/overview/components/VersionSurvey.scss
+++ b/src/version/overview/components/VersionSurvey.scss
@@ -74,6 +74,7 @@
                 align-items: center;
                 gap: 10px;
                 margin-bottom: 10px;
+                cursor: pointer;
                 .item-content {
                     .item-top, .item-bottom {
                         height: 30px;
