--- a/src/version/plan/components/VersionPlan.scss
+++ b/src/version/plan/components/VersionPlan.scss
@@ -51,6 +51,7 @@
                         padding: 0 10px;
                         background: #f0f0f0;
                         border-radius: 4px;
+                        width: 90px;
                     }
                 }
             }
