--- a/src/home/insight/components/InsightList.scss
+++ b/src/home/insight/components/InsightList.scss
@@ -20,7 +20,7 @@
         justify-content: space-between;
     }
     .insight-table-box {
-        margin-top: 0;
+        margin-top: 15px;
     }
     .insight-tabs {
         display: flex;
@@ -28,9 +28,8 @@
         justify-content: flex-start;
         height: 50px;
         line-height: 50px;
-        
+        gap: 15px;
         .insight-tab {
-            padding: 0 10px;
             color: #707070;
             font-size: 13px;
             cursor: pointer;
@@ -40,6 +39,7 @@
         .active-tabs {
             font-weight: var(--tiklab-font-weight-bold);
             color: #000;
+            border-bottom: 2px solid var(--tiklab-blue);
         }
     }
     .insight-name {
@@ -50,28 +50,6 @@
         text-decoration: underline;
     }
 
-    .insight-filter {
-        display: flex;
-        align-items: center;
-        justify-content: flex-start;
-        height: 50px;
-        line-height: 50px;
-        .vertical-bar {
-            width: 1px;
-            height: 15px;
-            background-color: #d7d7d7;
-            margin: 0 10px;
-        }
-        .active-tabs {
-            font-weight: var(--tiklab-font-weight-bold);
-            color: #000;
-            border-bottom: 2px solid var(--tiklab-blue);
-        }
-        .filter-search {
-            width: 120px;
-            border-radius: 4px;; 
-        }
-    }
 }
 .insight-delete-modal {
     .ant-modal-body {
