--- a/src/common/breadcrumb/Breadcrumb.scss
+++ b/src/common/breadcrumb/Breadcrumb.scss
@@ -5,15 +5,13 @@
     margin-bottom: 10px;
     .page-breadcrumb {
         font-size: var(--tiklab-font-16);
-    font-weight: var(--tiklab-font-weight-bold);
+        font-weight: var(--tiklab-font-weight-bold);
         display: flex;
         align-items: center;
-        .page-link:hover {
+        .page-back:hover {
             cursor: pointer;
             color: var(--tiklab-blue);
-            text-decoration: underline;
         }
-
 
         &-icon {
             width: 25px;
