--- a/src/project/statistics/ProjectStatisticsAside.scss
+++ b/src/project/statistics/ProjectStatisticsAside.scss
@@ -3,22 +3,30 @@
     width: 250px;
     border-right: 2px solid var(--tiklab-gray-200);
     height: 100%;
+
     .statistics-aside-title {
         padding: 10px 20px;
         font-size: var(--tiklab-font-16);
         font-weight: var(--tiklab-font-weight-bold);
         border-bottom: 1px var(--tiklab-gray-200) solid;
     }
+
     .statistics-type-title {
         padding: 0 20px;
-        height: 30px;
-        line-height: 30px;
+        height: 40px;
+        line-height: 40px;
         font-weight: 500;
         color: #777;
         display: flex;
         align-items: center;
+        justify-content: space-between;
+
+        &-left {
+            display: flex;
+            align-items: center;
+        }
     }
-    
+
 
     .statistics-menu-firstmenu:hover {
         cursor: pointer;
