--- a/src/work/components/WorkTable.scss
+++ b/src/work/components/WorkTable.scss
@@ -44,6 +44,9 @@
     .work-info-text {
         font-size: 13px;
     }
+    .work-table-select {
+        background: #edf0f5;
+    }
     .work-info {
         display: flex;
         align-items: center;
