--- a/src/common/styles/_color.scss
+++ b/src/common/styles/_color.scss
@@ -32,7 +32,7 @@ $form-input-color: #e3e8f07d;
     --tiklab-gray-300: #EDF0F5;
     --tiklab-gray-400: #e3e8f0;
     --tiklab-gray-500: #999;
-    --tiklab-gray-600: #fafafa;
+    --tiklab-gray-600: #fafaff;
     --tiklab-gray-700: #f7f7f7;
     --tiklab-gray: #efefef;
     
@@ -52,9 +52,7 @@ $form-input-color: #e3e8f07d;
     --tiklab-icon-size-20: 20px;
     --tiklab-icon-size-22: 22px;
     --tiklab-icon-size-32: 32px;
-
     --tiklab-head-height: 48px;
-    
     --tiklab-font-weight-bold: bold;
 }
 
@@ -115,8 +113,8 @@ $form-input-color: #e3e8f07d;
 }
 
 .list-img {
-    width: 32px;
-    height: 32px;
+    width: 24px;
+    height: 24px;
     margin-right: 5px;
 }
 .botton-icon {
