--- a/src/project/lineMap/component/VersionPage.scss
+++ b/src/project/lineMap/component/VersionPage.scss
@@ -1,29 +1,45 @@
 .version {
     margin-top: 15px;
+
+    .version-today {
+        background-color: var(--tiklab-blue);
+        height: 32px;
+        line-height: 32px;
+        width: 60px;
+        border-radius: 4px;
+        color: #fff;
+        text-align: center;
+        cursor: pointer;
+    }
+
     .version-action {
         display: flex;
         justify-content: space-between;
+
         .version-action-right {
             display: flex;
             align-items: center;
             gap: 15px;
         }
+
         .version-view {
             display: flex;
-            // border: 1px solid #f0f0f0;
             align-items: center;
             border-radius: 4px;
+
             .version-view-item {
                 padding: 0 15px;
                 height: 32px;
                 line-height: 32px;
                 cursor: pointer;
             }
+
             .version-view-select {
                 color: #fff;
                 background-color: var(--tiklab-blue);
                 border: 1px solid var(--tiklab-blue);
             }
+
             .version-view-week {
                 border: 1px solid #f0f0f0;
                 border-right: 0;
@@ -34,25 +50,25 @@
             .version-view-month {
                 border: 1px solid #f0f0f0;
                 border-left: 0;
-
-                
-
                 border-top-right-radius: 4px;
                 border-bottom-right-radius: 4px;
             }
         }
     }
+
     .version-name {
         cursor: pointer;
         display: flex;
         align-items: center;
         justify-content: center;
         color: var(--tiklab-blue);
-        
+
     }
-    .version-name:hover{
+
+    .version-name:hover {
         background-color: var(--tiklab-gray-400);
     }
+
     .version-linemap {
         .version-status {
             padding: 2px 3px;
@@ -62,14 +78,15 @@
             width: fit-content;
             color: #2b333e;
         }
-        .version-status-process{
+
+        .version-status-process {
             background: #b0d5dfa1;
             color: #132c33;
         }
+
         .version-status-done {
             background: #dfecd5e3;
             color: #5e5314;
         }
     }
 }
-
