--- a/src/projectSet/statistics/components/ProjectSetStatisticsAside.scss
+++ b/src/projectSet/statistics/components/ProjectSetStatisticsAside.scss
@@ -6,15 +6,23 @@
 
     .statistics-type-title {
         padding: 0 20px;
-        height: 30px;
-        line-height: 30px;
+        height: 40px;
+        line-height: 40px;
         font-weight: 500;
         color: #777;
         display: flex;
         align-items: center;
+        justify-content: space-between;
+        cursor: pointer;
+        &-left {
+            display: flex;
+            align-items: center;
+        }
     }
-    
-    .statistics-aside-title {
+    .statistics-type-title:hover {
+        background-color: var(--tiklab-gray-300);
+    }
+    .statistics-top-title {
         padding: 10px 20px;
         font-size: var(--tiklab-font-16);
         font-weight: var(--tiklab-font-weight-bold);
@@ -41,7 +49,7 @@
             line-height: 40px;
             width: 100%;
             align-items: center;
-            padding-left: 38px;
+            padding-left: 43px;
         }
 
         &-select {
